--- a/app/views/admin/drugs/new.html.erb
+++ b/app/views/admin/drugs/new.html.erb
@@ -8,15 +8,21 @@
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input02">İçerik (*)</label>
+      <label class="control-label" for="input02">Doğum Tarihi (*)</label>
       <div class="controls">
-        <textarea rows="3" class="input-xlarge" id="input02" name="content"></textarea>
+        <input type="text" class="input-xlarge" id="input02" name="expiry_date" data-datepicker="datepicker">
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input03">Fiyat (*)</label>
+      <label class="control-label" for="input03">İçerik (*)</label>
       <div class="controls">
-	<input type="text" class="input-xlarge" id="input03" name="price">
+        <textarea rows="3" class="input-xlarge" id="input03" name="content"></textarea>
+      </div>
+    </div>
+    <div class="control-group">
+      <label class="control-label" for="input04">Fiyat (*)</label>
+      <div class="controls">
+	<input type="text" class="input-xlarge" id="input04" name="price">
       </div>
     </div>
   </fieldset>
