--- a/app/views/admin/drugs/show.html.erb
+++ b/app/views/admin/drugs/show.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="control-group">
-        <label class="control-label" for="disabledInput">Doğum Tarihi (*)</label>
+        <label class="control-label" for="disabledInput">Son Kullanma Tarihi (*)</label>
         <div class="controls">
           <input type="text" class="input-xlarge disabled" id="disabledInput" value="<%= drug[:expiry_date] %>" disabled>
         </div>
