--- a/app/views/admin/drugs/new.html.erb
+++ b/app/views/admin/drugs/new.html.erb
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="input02">Doğum Tarihi (*)</label>
+      <label class="control-label" for="input02">Son Kullanma Tarihi (*)</label>
       <div class="controls">
         <input type="text" class="input-xlarge" id="input02" name="expiry_date" data-datepicker="datepicker">
       </div>
